2003-05-10  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/misc.tcl (sn_create_new_project): Check each
	import directory to see if it exists and generate
	an error if it does not. This avoids a problem
	where a typo in a directory name will create
	an empty project instead of telling you that the
	import dir does not exist.

2003-05-09  Mo DeJong  <mdejong@users.sourceforge.net>

	* etc/sn_prop.cfg.in: Remove empty -brow_switch
	from fortran parser config. Remove *.am from
	commented out elf parser since this extension
	is covered by the others rule. Remove -high_cmd
	and -high_switch from the c, c++, java, tcl,
	chill, and python configurations since these
	languages have built-in syntax highlighters.
	Remove -high_cmd and -high_switch from the
	asm, m4, and php configurations since these
	parsers do not support highlighting.

2003-05-09  Mo DeJong  <mdejong@users.sourceforge.net>

	* db/dbutils.c (search_for_symbol):
	* parsers/common/parser.c (put_cross_ref):
	Fixup some questionable uses of the ternary
	operator. Pass "" instead of NULL to copystrings
	function. Pass "NULL" instead of NULL to fprintf.
	These changes do not change any of the functionality.

2003-05-09  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/cobol/skeleton.c (log_symbol_filename,
	main):
	* parsers/cpp/skeleton.c (log_symbol_filename,
	main):
	* parsers/fortran/ftnchek.c (log_symbol_filename,
	main):
	* parsers/java/skeleton.c (log_symbol_filename,
	main):
	* parsers/tcl/skeleton.c (log_symbol_filename,
	main):
	* parsers/toolbox/snptools.c (sn_register_filename,
	sn_main):
	Rework parser command line logic so that either a
	-y option or a file name is required. The parsers
	no longer try to read from stdin since the
	functionality is no longer needed by the IDE
	and results is pointless complexity. Rework
	the log_symbol_filename implementations so
	they more closely match each other.

2003-05-09  Mo DeJong  <mdejong@users.sourceforge.net>
